--- a/DBI.Web.EMS/App_LocalResources/uxLogin.aspx.resx
+++ b/DBI.Web.EMS/App_LocalResources/uxLogin.aspx.resx
@@ -186,6 +186,7 @@
   <data name="loginButtonResource1.ToolTip" xml:space="preserve">
     <value />
   </data>
+  <assembly alias="Ext.Net" name="Ext.Net, Version=2.2.0.26560, Culture=neutral, PublicKeyToken=2e12ce3d0176cd87" />
   <data name="loginButtonResource1.ToolTipType" type="Ext.Net.ToolTipType, Ext.Net">
     <value>Qtip</value>
   </data>
@@ -320,5 +321,8 @@
   </data>
   <data name="loginVersion" xml:space="preserve">
     <value>Version</value>
+  </data>
+  <data name="loginErrorNoRoles" xml:space="preserve">
+    <value>Your account does not have any security roles, you may not login at this time.</value>
   </data>
 </root>
